<resources>
  <string name="app_name">Roleplay Companion</string>
  <string name="server_client_id">394355712566-fs883tu0roi27kttrdd2or6a61o4ro0i.apps.googleusercontent.com</string>

  <!-- menu strings -->
  <string name="action_export">Export to Drive</string>
  <string name="action_import">Import from Drive</string>

  <!-- campaign selection -->
  <string name="campaign_title">Select a campaign:</string>
  <string name="campaign_title_empty">
        No campaigns available.\nYou have to add one to get started.
    </string>
  <string name="campaign_delete_title">Delete Campaign</string>
  <string name="campaign_delete_message">
        Do you really want to delete this campaign?
    </string>
  <string name="delete_campaign_icon">Delete the @string/campaign_add_title</string>

  <!-- campaign editAction -->
  <string name="campaign_title_add">Add Campaign</string>
  <string name="campaign_title_edit">Edit Campaign</string>
  <string name="campaign_edit_name">Name</string>
  <string name="campaign_edit_intro">
        Adding a campaign defines you as the Dungeon Master for that campaign.
    </string>
  <string name="title_activity_campaign">Campaign</string>

  <!-- character selection -->
  <string name="character_title">Select a character</string>
  <string name="character_title_empty">
        No characters available.\nYou have to add one to get started.
    </string>
  <string name="character_delete_title">Delete Character</string>
  <string name="character_delete_message">
        Do you really want to delete this character?
  </string>
  <string name="character_deleted">The character has been deleted.</string>
  <string name="title_activity_character">Create Character</string>

  <!-- character -->
  <string name="character_name">Name</string>
  <string name="character_race">Race</string>
  <string name="character_gender">Gender</string>
  <string name="character_label_level">Level</string>
  <string name="character_select_class">Select Class</string>
  <string name="character_edit_name">Edit Name</string>
  <string name="character_edit_race">Select Race</string>
  <string name="character_edit_gender">Select Gender</string>
  <string name="character_edit_alignment">Select Alignment</string>
  <string name="character_edit_level">Edit Level</string>
  <string name="character_edit_levels">Edit Levels</string>
  <string name="character_edit_hp_label">hit points</string>
  <string name="character_edit_ability_increase_label">increase</string>
  <string name="hit_points">Hit Points</string>
  <string name="character_create_title">Create Character</string>
  <string name="abilityIncreaseTitle">Select Ability to increase</string>
  <string name="title_activity_settings">Settings</string>

  <!-- settings -->
  <string name="settings_title">Settings</string>
  <string name="settings_nickname_label">Nickname</string>
  <string name="settings_save">Save</string>
  <string name="settings_initial">First time setup for the Roleplay Companion.</string>

  <!-- timed condition dialog -->
  <string name="condition_enter">enter condition</string>

  <string name="campaign_edit_world_hint">select world…</string>
  <string name="settings_nickname_note">The nickname is used to identifiy you to other players and DMs.</string>
  <string name="campaign_select_world">Select world</string>
  <string name="campaign_button_delete">delete</string>
  <string name="campaign_deleted">The campaign has been deleted</string>
  <string name="campaign_default_name">Default Campaign</string>
  <string name="campaign_publish">publish</string>
  <string name="main_campaign_publish_title">Publish Campaign</string>
  <string name="main_campaign_publish_message">Are you sure you want to publish the campaign on the local network?</string>
  <string name="main_campaign_unpublish_title">Unpublish Campaign</string>
  <string name="main_campaign_unpublish_message">Are you sure you want to unpublish the campaign? This will make it inaccessible for your players.</string>
  <string name="edit_character_add">Add Character</string>
  <string name="edit_character_edit">Edit Character</string>
  <string name="edit_abilities">Edit Abilities</string>
  <string name="double_arrow_left">&#171;</string>
  <string name="double_arrow_right">&#187;</string>
  <string name="edit_campaign_date">Select Campaign Date</string>
  <string name="battle_title">Battle</string>
  <string name="title_monster_initiative">Select Monster Initiative</string>
  <string name="label_initiative_modifier">Initiative Modifier</string>
  <string name="character_select_campaign">Select campaign to move to</string>
  <string name="chip_wait_selection">Waiting for selection</string>
  <string name="campaign_button_move">Move character to other campaign</string>
  <string name="edit_timed_condition">Create a timed condition</string>
  <string name="title_xp_rewards">XP Rewards</string>
  <string name="action_clear_messages">Clear Messages</string>
  <string name="dialog_title_start_battle">Start an Encounter!</string>
  <string name="action_about">About</string>
  <string name="ceo">CEO</string>
  <string name="ceo_name">Queen of Nihil</string>
  <string name="coding">Coding</string>
  <string name="coding_name">Merlin</string>
  <string name="web">Web</string>
  <string name="web_address">https://companion.ixitxachitls.net</string>
  <string name="contact">Contact</string>
  <string name="contact_email">companion@ixitxachitls.net</string>
  <string name="testing">Testing</string>
  <string name="testing_name">NinjaTeddy</string>
  <string name="testing_name2">Tauriel Borrealis</string>
  <string name="testing_name3">The Dragon Slayers</string>
  <string name="campaign_delete_message_remote">Do you really want to delete the campaign? Note that the campaign will reappear as soon as it\'s available on the local network again.</string>
  <string name="character_add_item">Add Item</string>
  <string name="item">Item</string>
  <string name="item_description">The name of the item to add to the character\'s inventory.</string>
  <string name="character_edit_item">Edit Item</string>
  <string name="title_invite">Invite Players</string>
  <string name="sell_item">Sell Item</string>
  <string name="adventure_descripton">The adventure currently playing.</string>
  <string name="dialog_adventures_title">Select Adventure</string>
  <string name="dialog_title_levels">Levels</string>
  <string name="character_select_ability">Increased Ability</string>
  <string name="title_dialog_adjust_xp">Adjust XP</string>
  <string name="title_dialog_adjust_hp">Adjust HP</string>
  <string name="dialog_title_message">Send a Message</string>
  <string name="character_select_feat">Select Feat</string>
  <string name="user_location_description">The location of your miniatures.</string>
  <string name="user_location_label">Miniature Location</string>
  <string name="edit_location">Edit Location</string>
  <string name="feat_qualifier_weapon">Feat Qualifier (Weapon)</string>
  <string name="feat_qualifier_school">Feat Qualifier (School)</string>
  <string name="feat_qualifier_skill">Feat Qualifier (Skill)</string>
  <string name="feat_qualifier_spells">Feat Qualifier (Multiple Spells)</string>
  <string name="character_select_quality">Select Quality</string>
  <string name="select_adventure">Select Adventure</string>
  <string name="select_encounter">Select or Initialize Encounter</string>
  <string name="dialog_item_title">Item</string>
  <string name="spell">Spell</string>

</resources>
