<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017-{2017} Peter Balsiger
  ~ All rights reserved
  ~
  ~ This file is part of the Player Companion.
  ~
  ~ The Player Companion is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ The Player Companion is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with the Player Companion; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="20dp">

  <TextView
      android:id="@+id/initial"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="24dp"
      android:text="@string/settings_initial"
      android:textColor="@android:color/white"
      android:theme="@style/LargeText"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <net.ixitxachitls.companion.ui.views.LabelledEditTextView
      android:id="@+id/nickname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:descriptionText="@string/settings_nickname_note"
      app:labelColor="@color/white"
      app:labelText="@string/settings_nickname_label"
      app:layout_constraintHorizontal_bias="0.625"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/initial"
      android:layout_marginTop="10dp"
      app:lineColor="@color/white"
      app:textColor="@color/white"/>

  <CheckBox
      android:id="@+id/remote_campaigns"
      android:layout_width="wrap_content"
      android:layout_height="34dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:buttonTint="@color/white"
      android:text="Remote Campaigns"
      android:textColor="@color/white"
      android:theme="@style/LargeText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nickname"/>

  <CheckBox
      android:id="@+id/remote_characters"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:buttonTint="@color/white"
      android:text="Remote Characters"
      android:textColor="@color/white"
      android:theme="@style/LargeText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/remote_campaigns"/>

  <Button
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/settings_save"
      android:theme="@style/SmallText"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/features"/>

  <net.ixitxachitls.companion.ui.views.LabelledEditTextView
      android:id="@+id/features"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:descriptionText="A comma separated list of enabled features currently in development. Enable any such feature at your own risk, as anything might break at any time."
      app:labelColor="@color/white"
      app:labelText="Enabled Alpha Features"
      app:layout_constraintHorizontal_bias="0.625"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/remote_characters"
      app:lineColor="@color/white"
      app:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>
