<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017-{2017} Peter Balsiger
  ~ All rights reserved
  ~
  ~ This file is part of the Player Companion.
  ~
  ~ The Player Companion is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ The Player Companion is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with the Player Companion; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

  <LinearLayout
      android:id="@+id/settings_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="20dp">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <net.ixitxachitls.companion.ui.views.LabelledEditTextView
          android:id="@+id/nickname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginTop="10dp"
          android:layout_weight="1"
          app:descriptionText="@string/settings_nickname_note"
          app:labelColor="@color/white"
          app:labelText="@string/settings_nickname_label"
          app:lineColor="@color/white"
          app:textColor="@color/white"/>

      <net.ixitxachitls.companion.ui.views.RoundImageView
          android:id="@+id/image"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/ic_person_black_48dp"/>

    </LinearLayout>

    <net.ixitxachitls.companion.ui.views.LabelledEditTextView
        android:id="@+id/features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:descriptionText="A comma separated list of enabled features currently in development. Enable any such feature at your own risk, as anything might break at any time."
        app:labelColor="@color/white"
        app:labelText="Enabled Alpha Features"
        app:lineColor="@color/white"
        app:textColor="@color/white"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/settings_save"
        android:theme="@style/SmallText"/>

  </LinearLayout>
</ScrollView>
