<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017-2018 Peter Balsiger
  ~ All rights reserved
  ~
  ~ This file is part of the Roleplay Companion.
  ~
  ~ The Roleplay Companion is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ The Roleplay Companion is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with the Player Companion; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBack"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0"
        app:srcCompat="@mipmap/launcher_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"/>
  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:layout_marginBottom="10dp"
      android:background="@color/primaryDark"/>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/ceo"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ceo_name"
          android:theme="@style/LargeText"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/coding"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/coding_name"
          android:theme="@style/LargeText"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="UX"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Nobody (that was not hard to guess...)"
          android:theme="@style/LargeText"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/testing"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/testing_name"
          android:theme="@style/LargeText"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text=""
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/testing_name2"
          android:theme="@style/LargeText"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text=""
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/testing_name3"
          android:theme="@style/LargeText"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/web"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:autoLink="web"
          android:text="@string/web_address"
          android:theme="@style/LargeText"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/contact"
          android:textStyle="bold"
          android:theme="@style/LargeText"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:autoLink="email"
          android:text="@string/contact_email"
          android:theme="@style/LargeText"/>
    </TableRow>

  </TableLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attributions"
        android:textStyle="bold"
        android:theme="@style/LargeText"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Backpack by Joe Harrison from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Snow by Kylie Whittaker from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Viking by TiRo from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Goggles by Sofia Espino-Yaeger from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Puppeteer by Luis Prado from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Monster by omar vargas from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Experience by priyanka from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Icicles by icon 54 from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ice Cube by 23 icons from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Coins by André Luiz Gollo from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Log by Lucas Helle from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Drop by BomSymbols from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Cold by Landan Lloyd from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Man by Jennifer Morrow from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="premium by ProSymbols from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Weights by Sam Horner from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="armor by Eucalyp from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="crossed swords by Matt Caisley from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="abilities by sachin modgekar from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Layers by cindy clegane from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Battle by art shop from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="raised hand by Marco Fleseri from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="run by Vaibhav Radhakrishnan from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Knowledge by Flatart from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Trophy by Flatart from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="mental by Flatart from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="street sign by Pondok Multimedia from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="speak by Achmmad Fauzi from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Floor by Arthur Shlain from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="top by Lloyd Humphreys from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="wall by Icon Lauk from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Antique by Marksu Loritas from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Candle by Clockwise from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Mountain by iconcheese from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="bear trap by Marie-Pierre Bauduin from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Sound by Daniela Baptista from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="smell by corpus delicti from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="touch by Graphic Tigers from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="emotions by Nithinan Tatah from the Noun Project"
            android:theme="@style/LargeText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Book by NOVITA ASTRI from the Noun Project"
            android:theme="@style/LargeText"/>
      </LinearLayout>
    </ScrollView>

  </LinearLayout>

</LinearLayout>